Address minor SONAR issue and tidy crimeapplicationsadaptor schema